--- a/CustomRadio/css/main.css
+++ b/CustomRadio/css/main.css
@@ -31,3 +31,44 @@ h2 {
   font-size: 30px;
   margin: 0 0 20px;
 }
+
+/* custom radio */
+
+.customRadio input[type="radio"] {
+  position: absolute;
+  left: -9999px;
+}
+
+.customRadio input[type="radio"] + label {
+  position: relative;
+  padding: 3px 0 0 40px;
+  cursor: pointer;
+}
+
+.customRadio input[type="radio"] + label:before {
+  content: "";
+  background: #fff;
+  border: 2px solid #1cbe9d;
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.customRadio input[type="radio"] + label:after {
+  content: "";
+  background: #1cbe9d;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  opacity: 0;
+}
+
+.customRadio input[type="radio"]:checked + label:after {
+  opacity: 1;
+}
