--- a/CustomCheckbox/css/main.css
+++ b/CustomCheckbox/css/main.css
@@ -31,3 +31,46 @@ h2 {
   font-size: 30px;
   margin: 0 0 20px;
 }
+
+/* custom checkbox */
+
+.customCheckbox input[type="checkbox"] {
+  position: absolute;
+  left: -9999px;
+}
+
+.customCheckbox input[type="checkbox"] + label {
+  position: relative;
+  padding: 3px 0 0 40px;
+  cursor: pointer;
+}
+
+.customCheckbox input[type="checkbox"] + label:before {
+  content: "";
+  background: #fff;
+  border: 2px solid #1cbe9d;
+  border-radius: 3px;
+  height: 25px;
+  width: 25px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.customCheckbox input[type="checkbox"] + label:after {
+  content: "";
+  border-style: solid;
+  border-width: 0 0 2px 2px;
+  border-color: transparent transparent #1cbe9d #1cbe9d;
+  width: 15px;
+  height: 8px;
+  position: absolute;
+  top: 6px;
+  left: 5px;
+  opacity: 0;
+  transform: rotate(-45deg);
+}
+
+.customCheckbox input[type="checkbox"]:checked + label:after {
+  opacity: 1;
+}
